apps/microservices-demo/services/cartservice/base/cartservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - name: app
        image: cartservice
        volumeMounts:
        - name: init
          mountPath: /toolbox
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "50Mi"
          requests:
            cpu: "100m"
            memory: "50Mi"
      serviceAccountName: cartservice
      volumes:
      - name: init
        configMap:
          name: cartservice-init
