apps/microservices-demo/services/cartservice/base/cartservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  selector:
    app: cartservice
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
