apps/microservices-demo/services/cartservice/base/cartservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cartservice
spec:
  port:
    targetPort: http-8080
  to:
    kind: Service
    name: cartservice
